--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <base href=".">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
