--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Password Generator</title>
     <script type="module" crossorigin src="/assets/index.59a7dddd.js"></script>
     <link rel="stylesheet" href="/assets/index.d409cd0a.css">
   </head>
