--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <base href=".">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/react.35ef61ed.svg" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
