--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <base href=".">
+    <base href="." />
     <link rel="icon" type="image/svg+xml" href="/assets/react.35ef61ed.svg" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
@@ -10,7 +10,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
-    <script type="module" crossorigin src="/assets/index.59a7dddd.js"></script>
+    <script type="module" crossorigin src="/assets/index.fdd98069.js"></script>
     <link rel="stylesheet" href="/assets/index.d409cd0a.css">
   </head>
   <body>
