--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <base href="." />
-    <link rel="icon" type="image/svg+xml" href="/assets/react.35ef61ed.svg" />
+    <link rel="icon" type="image/svg+xml" href="/password-generator/assets/react.svg" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
-    <script type="module" crossorigin src="/assets/index.fdd98069.js"></script>
-    <link rel="stylesheet" href="/assets/index.d409cd0a.css">
+    <script type="module" crossorigin src="/password-generator/assets/index.fdd98069.js"></script>
+    <link rel="stylesheet" href="/password-generator/assets/index.fe9f6e28.css">
   </head>
   <body>
     <div id="root"></div>
