--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <base href=".">
-    <link rel="icon" type="image/svg+xml" href="src/assets/react.svg" />
+    <base href="." />
+    <link rel="icon" type="image/svg+xml" href="/assets/react.svg" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
